java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119c.pass
package org.netbeans.test.java.hints;

/**
 * @author leon chiver
 */
public class IncorrectType58119c {

    public void doStuff3() {
        Long e;
        e = looong();
    }
    
    private static Long looong() {
        return null;
    }
    
}
